# ubiquitous-happiness

./: .gitignore  .gitmodules  BoundingBoxFormat.txt  run_viewer_cls.py  setup.sh  test.py  test_index_begin_from1.py  test_index_begin_from3.py
Dataset/: DataSplit.py  __init__.py  _base_seed.py
Dataset/Base/: factory.py  factory_seed.py
Dataset/Builder/: builder.py  dataset_def.yaml  dataset_using.yaml
Dataset/CLS/: factory.py
Dataset/CacheService/: common.py  constructor.py
Dataset/Config/: .gitignore  cache.py  path.py  path.template.py  path.template.yaml
Dataset/DET/: factory.py
Dataset/Detection/: __init__.py  factory.py  merge_tool.py
Dataset/Filter/: CategoryFilter.py  CategoryMapping.py  DataCleaner_BoundingBox.py  DataCleaner_Integrity.py  DataCleaner_NoAbsentObjects.py  Selector.py  SortByImageRatio.py  _common.py
Dataset/MOT/: factory.py
Dataset/SEG/: YouTube_VIS.py
Dataset/SOT/: factory.py
Dataset/Type/: bounding_box_format.py  specialized_dataset.py
Dataset/Types/: bounding_box_format.py  lossless_image.py  string_array.py
Miscellaneous/: cpu_info.py  disable_gpu.py  distributed.py  git_state.py  most_frequent.py  simple_api_gateway.py  simple_prefetcher.py  torch_print_running_environment.py
Miscellaneous/Numpy/: dtype.py
Miscellaneous/Viewer/: old_qt5_viewer.py  qt5_viewer.py
Miscellaneous/concurrent/: object_storage.py  resource_scheduler.py
Miscellaneous/torch/: checkpoint.py  dump_checkpoint.py  metric_logger.py  smoothed_value.py
Utils/: boxes_ops.py  decode_image.py  detr_misc.py  get_tight_bounding_box.py  join_and_get_platform_style_path.py  simple_prefetcher.py  yaml_config.py
Utils/yolov5/: general.py  plots.py
Viewer/: plot.py  qt5_viewer.py  simple_image_viewer.py  simple_painter.py  simple_viewer.py  viewer.py
config/deform_detr_tracking/: network-255.yaml  network.yaml  train-128.yaml  train.yaml
config/detr/: network.yaml  train.yaml
config/detr_tracking/: train.yaml
config/pysot/: default.yaml
config/siamfc/: baseline-v2.yaml
config/transt/: config.yaml  evaluation.yaml  train.yaml
config/transt-swin/: config.yaml
config/transt-swin-lr/: train.yaml
data/: pixel_coordinate_and_bounding_box_definition.txt
data/TransT/: builder.py  collate_fn.py  label_generation.py  pipeline.py  processor.py  test_pi.py  test_pipeline.py
data/augmentation/: detr.py  resize.py
data/collate_fn/: collate_different_size_image_and_generating_mask.py
data/context/: coordinate_system.py
data/detection/: builder.py  pytorch_dataset_wrapper.py
data/detr_tracking_variants/: processor.py
data/detr_wrapper/: _common.py  collate_fn.py  tracking_wrapper.py  wrapper.py
data/distributed/: dataset.py  notication_based_sampler.py  parallel_testing_orchestrator.py  sampler.py
data/label/: gaussian_target.py
data/math/: gaussian.py
data/new/: multires.py
data/new1/: sampler.py
data/operator/: numpy_torch_interop.py
data/performance/: cuda_prefetcher.py  cuda_prefetcher_thread.py
data/randomness_control/: data_loader.py  iterable_dataset.py  ordered_batch_sampler.py
data/siamfc/: curation.py  curation_with_aug.py  dataset.py  dataset_wrapper.py  detr_tracking_processor.py  label.py  post_combiner.py  processor.py  sampler.py
data/siamrpn/: augmentation.py  curation.py  pipeline.py  processor.py
data/torch/: data_loader.py
data/tracking/: data_loader.py  indexing.py  sampling.py  simple_dataloader.py
data/types/: bounding_box_format.py
data/yolov5_wrapper/: _mosaic_pipeline.py  _pipeline.py  collate_fn.py  dataloader.py  wrapper.py
entry/test/: run_siamfc_otb100_evalution.py
entry/yolov5/: test.py  train.py
evaluation/: distributed.py
evaluation/SOT/: evaluation.py  runner.py  sample_tracker.py  test_.py
evaluation/evaluator/: coco.py
evaluation/experiment/: run_otb_evaluation.py  run_vot.py
evaluation/logger/: pytracking.py  simple.py
evaluation/method/: ope.py
evaluation/tracking/: prepare.py
evaluation/viz/: viz_video.py  viz_video2.py
factory/: tracker.py
miscellanies/: collate.py  flatten_dict.py  yaml_ops.py
miscellanies/Viewer/: qt5_viewer.py
miscellanies/concurrent/: object_storage.py  random_sampler_without_replacement.py  resource_scheduler.py
miscellanies/torch/: checkpoint.py  smoothed_value.py
models/TransT/: aft.py  backbone.py  builder.py  criterion.py  network.py  position_encoding.py  resnet50.py  swin_feature_fusion.py
models/backbone/: alexnet.py  alexnet_bn.py
models/blocks/: conv_bn_relu.py
models/head/: siamfc.py
models/loss/: bce_loss.py  focal_loss.py  gaussian_focal_loss.py  gfocal_v1.py  gfocal_v2.py  giou.py  iou_and_iou_aware_loss.py  iou_aware_loss.py  iou_loss.py  l1_bbox.py  varifocal.py
models/operator/multiscale_deformable_attention/: CMakeLists.txt  _get_torch_build_conf.py  _get_torch_cuda_archs.py  _get_torch_include_paths.py  build.py  func.py  func_cuda.py
models/operator/multiscale_deformable_attention/src/: CMakeLists.txt  module_def.cpp
native_extension/: .gitignore  __init__.py  build.py
native_extension/src/: CMakeLists.txt
native_extension/src/native/: CMakeLists.txt
native_extension/src/native/include/native/: common.h  image_decoder.h
native_extension/src/native/include/native/image_operation/: channel.h  resize.h  translate_and_scale.h
native_extension/src/native/include/native/statistic/: iou.h
native_extension/src/native/src/native/: dll_entry.cpp  image_decoder.cpp
native_extension/src/native/src/native/image_operation/: channel.cpp  resize.cpp  translate_and_scale.cpp
native_extension/src/native/src/native/statistic/: iou.cpp
native_extension/src/py_interop/: CMakeLists.txt
native_extension/src/py_interop/include/py_module/: common.h  image_decoder.h  image_operation.h
native_extension/src/py_interop/src/py_module/: dll_entry.cpp  image_decoder.cpp  image_operation.cpp  module_def.cpp
tests/: test_equal.py  test_equal_otb.py  view_sot_dataset.py
weight/: .gitignore  link.txt
workarounds/: Tensorflow.py  all.py  reproducibility.py  torchvision_tensorflow.py
(+1116 files in other folders)
